[gd_scene load_steps=4 format=3 uid="uid://cq37vofnjpmyu"]

[ext_resource type="PackedScene" uid="uid://dyafskg3ggf6v" path="res://objects/Environment.tscn" id="1_qae0b"]
[ext_resource type="Script" uid="uid://biwsqlu5r64m4" path="res://components/scene_managers/game_over_manager.gd" id="1_vuicl"]
[ext_resource type="PackedScene" uid="uid://dgi3541b0t7ph" path="res://objects/GameCamera.tscn" id="2_vuicl"]

[node name="GameOver" type="Node3D"]
script = ExtResource("1_vuicl")

[node name="WorldEnvironment" parent="." instance=ExtResource("1_qae0b")]

[node name="GameCamera" parent="." instance=ExtResource("2_vuicl")]

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="CenterContainer" type="CenterContainer" parent="GUI"]
layout_mode = 0
offset_top = 100.0
offset_right = 1280.0
offset_bottom = 200.0

[node name="StatusLabel" type="Label" parent="GUI/CenterContainer"]
layout_mode = 2
text = "Placeholder"

[node name="HBoxContainer" type="HBoxContainer" parent="GUI"]
layout_mode = 0
offset_top = 540.0
offset_right = 1280.0
offset_bottom = 640.0
theme_override_constants/separation = 50
alignment = 1

[node name="MenuButton" type="Button" parent="GUI/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Menu"

[node name="RetryButton" type="Button" parent="GUI/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Retry"

[node name="QuitButton" type="Button" parent="."]
offset_left = 1215.0
offset_top = 19.0
offset_right = 1257.0
offset_bottom = 50.0
text = "Quit"

[connection signal="pressed" from="GUI/HBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="GUI/HBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
